--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'globals.scss';
 @import 'variables';
 @import 'btn-show.scss';
+@import 'title.scss';
 
 @import 'header.scss';
 @import 'icon.scss';
@@ -11,3 +12,6 @@
 @import 'navigation.scss';
 
 @import 'brends.scss';
+@import 'techTypes.scss';
+@import 'price.scss';
+@import 'footer.scss';
