--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -1,5 +1,3 @@
-@import 'variables';
-
 * {
   margin: 0;
   padding: 0;
@@ -68,7 +66,9 @@ img {
 
 // Экраны шире 1440px
 @media screen and (min-width: 1440px) {
-  main {
+  main,
+  header,
+  footer {
     max-width: 1120px;
   }
 }
