--- a/src/scss/techTypes.scss
+++ b/src/scss/techTypes.scss
@@ -1,30 +1,21 @@
-@import 'variables.scss';
-
-.brends {
+.techTypes {
   letter-spacing: -0.2px;
   overflow: hidden;
   margin-bottom: 8px;
 
-  &__title {
-    text-transform: uppercase;
-    line-height: 24px;
-    color: $font-color-gray;
-    padding: 16px;
-    background-image: linear-gradient(
-      to right,
-      $light-gray-color,
-      $white-color
-    );
-  }
-
   &__card {
-    height: 72px;
+    height: 160px;
+    flex-direction: column;
+    font-weight: 500;
+    align-items: start;
+    line-height: 24px;
 
     &::after {
       content: '';
       background: url(../img/go.svg) no-repeat;
       width: 40px;
       height: 40px;
+      align-self: end;
     }
   }
 
@@ -35,7 +26,7 @@
 
 // Экраны шире 768px
 @media screen and (min-width: 768px) {
-  .brends {
+  .techTypes {
     &__swiper {
       padding: 0 24px;
     }
@@ -47,7 +38,7 @@
   }
 
   /* Стили после нажатия кнопки "Показать все" */
-  .show .brends__swiper {
+  .show .techTypes__swiper {
     height: auto;
     overflow: visible;
     margin-bottom: 46px;
@@ -56,7 +47,7 @@
 
 // Экраны шире 1440px
 @media screen and (min-width: 1440px) {
-  .brends {
+  .techTypes {
     &__swiper {
       padding: 0 32px;
     }
