--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -3,12 +3,11 @@
   font-size: 14px;
   font-weight: 500;
   color: $font-color-gray;
-  padding: 0 16px;
+  margin: 0 16px 19px;
   text-align: center;
   display: flex;
   flex-direction: column;
   gap: 16px;
-  margin-bottom: 19px;
 }
 
 // Экраны шире 768px
@@ -37,7 +36,8 @@
 // Экраны шире 1440px
 @media screen and (min-width: 1440px) {
   .footer {
-    margin: 0 32px 25px;
+    margin: 0 0 25px;
+    padding: 0 32px;
 
     &__item {
       min-width: 330px;
