--- a/src/scss/price.scss
+++ b/src/scss/price.scss
@@ -2,6 +2,10 @@
   overflow: hidden;
   margin-bottom: 40px;
 
+  &__head {
+    display: none;
+  }
+
   &__card {
     height: 200px;
   }
@@ -18,7 +22,7 @@
     letter-spacing: -0.2px;
     font-weight: 500;
     font-size: 16px;
-    padding: 0 16px;
+    margin: 0 16px;
     text-align: left;
 
     &-arrow {
@@ -31,55 +35,87 @@
 // Экраны шире 768px
 @media screen and (min-width: 768px) {
   .price {
+    &__title {
+      margin-bottom: 16px;
+    }
+
+    &__head {
+      display: flex;
+      justify-content: space-between;
+      gap: 22px;
+      font-size: 14px;
+      line-height: 16px;
+      color: $font-color-gray;
+      align-items: center;
+      height: 48px;
+      margin: 0 24px;
+      padding: 0 16px;
+    }
+
+    &__head-col {
+      &--services {
+        flex-basis: 348px;
+        flex-grow: 1;
+      }
+
+      &--price {
+        flex-basis: 74px;
+        flex-grow: 1;
+      }
+
+      &--term {
+        flex-basis: 220px;
+        flex-grow: 1;
+      }
+    }
+
+    &__swiper {
+      height: auto;
+      margin: 0 24px 24px;
+      padding: 0;
+
+      &-pagination {
+        display: none;
+      }
+
+      &.-non-slider {
+        & .swiper-wrapper {
+          transform: inherit !important;
+          display: grid;
+          border-radius: 6px;
+          background-color: $white-color;
+          padding: 0 16px;
+          box-sizing: border-box;
+        }
+
+        & .swiper-slide {
+          width: 100% !important;
+          height: 64px;
+          border: none;
+          border-radius: 0px;
+          background-color: transparent;
+          padding: 0;
+          border-bottom: 1px solid $border-gray-color;
+          box-sizing: content-box;
+
+          &:last-child {
+            border: none;
+          }
+        }
+
+        & .swiper-slide-duplicate {
+          display: none;
+        }
+      }
+    }
+
     &__text {
       width: 420px;
+      margin: 0 24px 16px;
     }
-  }
-}
 
-.card {
-  flex-direction: column;
-  align-items: start;
-  justify-content: space-between;
-  font-size: 14px;
-
-  &__item:last-child {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
-    width: 228px;
-  }
-
-  &__title {
-    line-height: 16px;
-    color: $font-color-gray;
-    margin-bottom: 4px;
-  }
-
-  &__description {
-    line-height: 18px;
-  }
-
-  &__btn {
-    border-radius: 16px;
-    background-color: $pink-color;
-    color: $white-color;
-    line-height: 24px;
-    font-size: 12px;
-    letter-spacing: -0.15px;
-    font-weight: 500;
-    text-transform: uppercase;
-    padding: 4px 8px 4px 12px;
-    display: flex;
-    // margin-left: auto;
-
-    &::after {
-      content: '';
-      background: url(../img/arrow_more_white.svg);
-      margin-left: 8px;
-      width: 24px;
-      height: 24px;
+    &__btn {
+      margin: 0 24px;
     }
   }
 }
