--- a/src/scss/icon.scss
+++ b/src/scss/icon.scss
@@ -14,16 +14,31 @@
   &--phone {
     background-image: url(../img/icon_phone.svg);
     display: none;
+
+    &--show {
+      background-image: url(../img/icon_phone.svg);
+      display: block;
+    }
   }
 
   &--chat {
     background-image: url(../img/icon_chat.svg);
     display: none;
+
+    &--show {
+      background-image: url(../img/icon_chat.svg);
+      display: block;
+    }
   }
 
   &--profile {
     background-image: url(../img/icon_profile.svg);
     display: none;
+
+    &--show {
+      background-image: url(../img/icon_profile.svg);
+      display: block;
+    }
   }
 
   &--settings {
@@ -57,6 +72,15 @@
 
     &--profile {
       display: block;
+    }
+  }
+}
+
+// Экраны шире 1440px
+@media screen and (min-width: 1440px) {
+  .icon {
+    &--close {
+      display: none;
     }
   }
 }
