--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -3,7 +3,8 @@
   font-size: 14px;
   font-weight: 500;
   color: $font-color-gray;
-  margin: 0 16px 19px;
+  margin: 0 16px;
+  padding-bottom: 19px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -13,7 +14,8 @@
 // Экраны шире 768px
 @media screen and (min-width: 768px) {
   .footer {
-    margin: 0 24px 25px;
+    margin: 0 24px;
+    padding-bottom: 25px;
     flex-direction: row;
     justify-content: space-between;
     gap: 35px;
