--- a/src/scss/icon.scss
+++ b/src/scss/icon.scss
@@ -79,7 +79,7 @@
 // Экраны шире 1440px
 @media screen and (min-width: 1440px) {
   .icon {
-    &--close {
+    &--close--hide {
       display: none;
     }
   }
