--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,8 @@
 @import 'swiper.scss';
 @import 'fonts.scss';
 @import 'globals.scss';
-@import 'variables';
+@import 'variables.scss';
+@import 'mixin.scss';
 @import 'btn-show.scss';
 @import 'title.scss';
 
@@ -18,3 +19,4 @@
 @import 'footer.scss';
 
 @import 'burger-menu.scss';
+@import 'popup.scss';
