--- a/style.css
+++ b/style.css
@@ -540,11 +540,28 @@ img {
   .btn-show:hover {
     transform: scale(1.1); }
 
+.hide .btn-hide {
+  display: none; }
+
 /* Стили после нажатия кнопки "Показать все" */
 .show .btn-show {
-  padding-bottom: 14px; }
-  .show .btn-show::before {
+  display: none; }
+
+.show .btn-hide {
+  line-height: 24px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  transition: transform 0.3s; }
+  .show .btn-hide::before {
+    content: '';
+    background: url(./static/arrows.svg) no-repeat;
+    margin-right: 8px;
+    width: 24px;
+    height: 24px;
     rotate: 180deg; }
+  .show .btn-hide:hover {
+    transform: scale(1.1); }
 
 .title {
   text-transform: uppercase;
@@ -707,6 +724,11 @@ img {
     width: 100%;
     height: auto; }
 
+/* Стили после нажатия кнопки "Показать все" */
+.show .services__text {
+  max-height: none;
+  overflow: visible; }
+
 @media screen and (min-width: 768px) {
   .services {
     margin-bottom: 40px; }
@@ -863,12 +885,7 @@ img {
       display: none; }
   .brends__btn {
     display: flex;
-    margin: 0 24px; }
-  /* Стили после нажатия кнопки "Показать все" */
-  .show .brends__swiper {
-    height: auto;
-    overflow: visible;
-    margin-bottom: 46px; } }
+    margin: 0 24px; } }
 
 @media screen and (min-width: 1440px) {
   .brends__swiper {
@@ -879,6 +896,12 @@ img {
            column-gap: 32px; }
   .brends__btn {
     padding-bottom: 34px; } }
+
+/* Стили после нажатия кнопки "Показать все" */
+.show .brends__swiper {
+  height: auto;
+  overflow: visible;
+  margin-bottom: 46px; }
 
 .techTypes {
   letter-spacing: -0.2px;
@@ -920,12 +943,7 @@ img {
       display: none; }
   .techTypes__btn {
     display: flex;
-    margin: 0 24px; }
-  /* Стили после нажатия кнопки "Показать все" */
-  .show .techTypes__swiper {
-    height: auto;
-    overflow: visible;
-    margin-bottom: 46px; } }
+    margin: 0 24px; } }
 
 @media screen and (min-width: 1440px) {
   .techTypes__swiper {
@@ -936,6 +954,12 @@ img {
            column-gap: 32px; }
   .techTypes__btn {
     padding-bottom: 34px; } }
+
+/* Стили после нажатия кнопки "Показать все" */
+.show .techTypes__swiper {
+  height: auto;
+  overflow: visible;
+  margin-bottom: 46px; }
 
 .price {
   overflow: hidden;
