исправлены кнопки btn-show

--- a/src/scss/navigation.scss
+++ b/src/scss/navigation.scss
@@ -21,7 +21,7 @@
 
     &--active {
       background-color: $white-color;
-      border: 2px solid $lagoon-color;
+      border: 2px solid #b8ffec;
     }
 
     &:hover {
