--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,7 +3,7 @@
 @import 'globals.scss';
 @import 'variables.scss';
 @import 'mixin.scss';
-@import 'btn.scss';
+@import 'btn-show.scss';
 @import 'title.scss';
 
 @import 'header.scss';
