--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,6 +5,7 @@
   align-items: center;
   background-color: $white-color;
   padding: 0 16px;
+  border-bottom: 1px solid $light-lagoon-color;
 
   &__part {
     display: flex;
