--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,6 +2,7 @@
 $white-color: #ffffff;
 $pink-color: #ff3e79;
 $lagoon-color: #41f6d7;
+$light-lagoon-color: #d9fff5;
 $light-gray-color: #f8f8f8;
 $gray-color: #b5b6bc;
 $border-gray-color: #eaeaea;
